      \pkg{stats}. (\code{profile.nls()} and \code{plot.profile.nls()}
      were in \code{stats} already.)

      \item The \code{confint()} and \code{profile} methods for
      \code{"glm"} objects have gained a possibility to do profiling
      based on the Rao Score statistic in addition to the default
      Likelihood Ratio. This is controlled by a new \code{test=}
      argument. 
      
      \item The \code{"glm"} method for \code{anova()} computes test
      statistics and p-values by default, using a chi-squared test or
      an F test depending on whether the dispersion is fixed or
      free.  Test statistics can be suppressed by giving argument
      \code{test} a false logical value.

      \item In \code{setRepositories()} the repositories can be set
      using their names via \code{name=} instead of index \code{ind=}.

      \item \code{methods()} and \code{.S3methods()} gain a
      \code{all.names} option for the (rare) case where functions starting
      with a \samp{.} should be included.

      \item Serializations can now be interrupted (e.g., by \kbd{Ctrl-C} on
      a Unix-alike) if they take too long, as e.g., from \code{save.image()},
      thanks to suggestions by Ivan Krylov and others on R-devel.

      \item New startup option \option{--max-connections} to set the
      maximum number of connections for the session.  Defaults to 128 as
      before: allowed values up to 4096 (but resource limits may in practice
      restrict to smaller values).

      \item \R on Windows (since Windows 10 2004) now uses the new Segment
      Heap allocator. This may improve performance of some memory intensive
      applications.

      \item When \R packages are built, typically by \command{R CMD build <pkg>},
      the new \command{--user=<build_user>} option overrides the
      (internally determined) user name, currently \code{Sys.info()["user"]}
      or \env{LOGNAME}.  This is a (modified) fulfillment of Will Landau's