@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2023-04-19 r84284) -- "Unsuffered Consequences"
+R Under development (unstable) (2023-05-17 r84444) -- "Unsuffered Consequences"
 Copyright (C) 2023 The R Foundation for Statistical Computing
 Platform: aarch64-apple-darwin22.4.0 (64-bit)
 
@@ -245,8 +245,8 @@ List of 3
 +     "\n\t starting with 'is.' :\t  ",
 +     sum(grepl("^is\\.", ls.base[base.is.f])), "\n", sep = "")
 
-Number of all base objects:	1387
-Number of functions from these:	1343
+Number of all base objects:	1390
+Number of functions from these:	1346
 	 starting with 'is.' :	  53
 
 > ## R ver.| #{is*()}
